fix: compare account route height and hover shadow clipping

--- a/packages/wallets/src/routes/CompareAccountsRoute/CompareAccountsRoute.scss
+++ b/packages/wallets/src/routes/CompareAccountsRoute/CompareAccountsRoute.scss
@@ -1,5 +1,5 @@
 .wallets-compare-accounts-route {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 8.4rem);
     overflow-x: hidden;
 }
